<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    card_view:cardCornerRadius="4dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/img_item_photo1"
            android:layout_width="110dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_item_room_name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/jenis_kamar" />

            <TextView
                android:id="@+id/tv_item_room_price1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                tools:text="@string/room_price" />

            <TextView
                android:id="@+id/tv_item_room_facilities1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:singleLine="true"
                tools:text="@string/facilities" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/btn_detail_kost1"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lihat_kost"
                    android:textSize="11sp"
                    android:layout_weight="1"
                    tools:ignore="SmallSp" />
                <Button
                    android:id="@+id/btn_detail_room1"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail"
                    android:textSize="11sp"
                    android:layout_weight="1"
                    tools:ignore="SmallSp" />
            </LinearLayout>



        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
