<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.detail_kost.DetailKostActivity"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:layout_marginBottom="4dp"
                android:src="@drawable/pixel_google"
                tools:src="@color/colorAccent"/>

            <TextView
                android:id="@+id/tv_item_name"
                style="@style/TextContent.Black"
                android:textSize="32sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                tools:text="nama kost kost" />
            <TextView
                android:id="@+id/tv_kost_pemilik"
                style="@style/TextContent"
                android:text="@string/pemilik"
                android:layout_marginBottom="8dp"
                android:lineSpacingMultiplier="1"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/tv_kost_alamat"
                style="@style/TextContent"
                android:text="@string/alamat"
                android:layout_marginBottom="8dp"
                android:lineSpacingMultiplier="1"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/tv_kost_keterangan"
                style="@style/TextContent"
                android:text="@string/keterangan"
                android:layout_marginBottom="8dp"
                android:lineSpacingMultiplier="1"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/tv_kamar_jenis"
                style="@style/TextContent.Subtitle"
                android:text="@string/stock_kost"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textAlignment="center"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent"
                />
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_kamar" />
        </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar_detail_kost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>